--- a/1st_prog.html
+++ b/1st_prog.html
@@ -9,7 +9,7 @@
  </head>
  <body style="background-color:powderblue">
   <h1 style="text-align:center"> Tribute to APJ </h1>
-  <p align="center"><img src="https://github.com/SGPOORNIMA/project_1/blob/main/apj.JPG"></img></p>
+  <p align="center"><img src="https://sgpoornima.github.io/project_1/apj.JPG"></img></p>
   <h2> <u>About</u></h2>
   <p>5 October 1931 – 27 July 2015 was an Indian aerospace scientist who served as the 11th president of India from 2002 to 2007. He was born and raised in Rameswaram,  Tamil Nadu and studied physics and aerospace engineering. He spent the next four decades as a scientist and science administrator.Kalam was elected as the 11th president of India in 2002 with the support of both the ruling Bharatiya Janata Party and the then-opposition Indian National Congress. Widely referred to as the "People's President", he returned to his civilian life of education, writing and public service after a single term. He was a recipient of several prestigious awards, including the Bharat Ratna, India's highest civilian honour.</p>
  </body>
