--- a/3rd_prog.html
+++ b/3rd_prog.html
@@ -5,7 +5,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title> JavaScript Book </title>
-  <link rel="stylesheet" href="3rd_prog.css">
+  <link rel="stylesheet" href="https://sgpoornima.github.io/project_1/3rd_prog.css">
   
  </head>
  <body>
@@ -22,7 +22,7 @@
  <h1 style="text-align:center">You dont know JavaScript</h1><br>
  <br>
  <div class="image">
- <p align="center"><img src="F:\SaasMantra - My project database\Html and css project\prog_3.jpg" ></img></p>
+ <p align="center"><img src="https://sgpoornima.github.io/project_1/prog_3.jpg" ></img></p>
  </div>
  <div class="text">
 	<div class="text1">
