--- a/3rd_prog.html
+++ b/3rd_prog.html
@@ -5,7 +5,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title> JavaScript Book </title>
-  <link rel="stylesheet" href="https://github.com/SGPOORNIMA/project_1/blob/main/3rd_prog.css">
+  <link rel="stylesheet" href="https://sgpoornima.github.io/project_1/3rd_prog.css">
   
  </head>
  <body>
