--- a/3rd_prog.html
+++ b/3rd_prog.html
@@ -22,7 +22,7 @@
  <h1 style="text-align:center">You dont know JavaScript</h1><br>
  <br>
  <div class="image">
- <p align="center"><img src="https://github.com/SGPOORNIMA/project_1/blob/main/prog_3.JPG" ></img></p>
+ <p align="center"><img src="https://sgpoornima.github.io/project_1/prog_3.JPG" ></img></p>
  </div>
  <div class="text">
 	<div class="text1">
